Docs(roadmap): update homepage link, expand version entries, and refine styles. - Updated homepage link to point to the correct roadmap page - Finished adding and expanding all version sections - Adjusted subsection styles to improve spacing and readability

--- a/Styles/layout.css
+++ b/Styles/layout.css
@@ -87,7 +87,7 @@ footer {
 }
 
 .section_subsection:not(first-of-type) {
-  margin-bottom: var(--lg-space);
+  margin-bottom: var(--xl-space);
 }
 
 .subsection-title {
